# airplane_mode

./: README.md  hooks.py  pyproject.toml
airplane_mode/: hooks.py
airplane_mode/airplane_mode/: utils.py
airplane_mode/airplane_mode/doctype/airline/: airline.json  airline.py  test_airline.py
airplane_mode/airplane_mode/doctype/airplane/: airplane.js  airplane.json  test_airplane.py
airplane_mode/airplane_mode/doctype/airplane_flight/: airplane_flight.js  airplane_flight.json  airplane_flight.py  test_airplane_flight.py
airplane_mode/airplane_mode/doctype/airplane_ticket/: airplane_ticket.json  airplane_ticket.py
airplane_mode/airplane_mode/doctype/airplane_ticket_add_on_item/: airplane_ticket_add_on_item.json  airplane_ticket_add_on_item.py
airplane_mode/airplane_mode/doctype/airplane_ticket_add_on_type/: airplane_ticket_add_on_type.js  airplane_ticket_add_on_type.json  airplane_ticket_add_on_type.py  (+1 more)
airplane_mode/airport_shop_management/:  utils.py
airplane_mode/config/: routes.py
airplane_mode/doctype/airline/: airline.js  airline.json  airline.py
airplane_mode/doctype/airplane/: airplane.json  airplane.py
airplane_mode/doctype/airplane_ticket/: airplane_ticket.js  airplane_ticket.json  airplane_ticket.py  test_airplane_ticket.py
airplane_mode/doctype/flight_passenger/: flight_passenger.js  flight_passenger.json  flight_passenger.py
airplane_mode/public/js/: airline_form.js  airplane_ticket.js
airplane_mode/www/: airline.py  airplane_flight.html  shops.html  shops.py  show-me.html
airplane_mode/www/flights/: flights.html  flights.py
(+43 files in other folders)
