[project]
name = "airplane_mode"
authors = [
    { name = "Zain (Xeverse Planet)", email = "zainjee331@gmail.com"}
]
description = "A Frappe app to manage and simulate airplane mode features for users, including toggling network access, offline data management, and tracking system connectivity status in enterprise systems"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
